Fix issue where dropdown menus cause vertical scrollbars to appear on parent elements.

--- a/styles/react-search-select.css
+++ b/styles/react-search-select.css
@@ -24,3 +24,8 @@
   .select-search__option:not(.is-selected):hover {
   @apply bg-yellow-200;
 }
+
+/* Set fixed height for the child container to avoid unexpected scrollbars on parent containers */
+.select-search__select {
+  height: 255px;
+}
